<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/login_user"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vector_user"
            android:background="@drawable/effect_radius_blue_object"
            android:textColor="@color/white"
            android:padding="5dp"
            android:drawablePadding="8dp"
            android:hint="@string/login_email"
            android:textColorHint="#77FFFFFF"
            android:lines="1"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/vector_key"
            android:background="@drawable/effect_radius_blue_object"
            android:textColor="@color/white"
            android:padding="5dp"
            android:drawablePadding="8dp"
            android:hint="@string/login_password"
            android:textColorHint="#77FFFFFF"
            android:lines="1"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/login_button_singIn"
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18dp"
            android:text="@string/login_button1"
            android:textColor="@color/white"
            android:background="@drawable/effect_radius_blue"
            android:padding="5dp"
            android:foreground="@drawable/effect_ripple_background"
            android:clickable="true"/>


        <TextView
            android:id="@+id/login_recover"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_recover"
            android:textColor="@color/black"
            android:foreground="@drawable/effect_ripple_background"
            android:clickable="true"/>


        <TextView
            android:id="@+id/login_register"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_register"
            android:textColor="@color/black"
            android:foreground="@drawable/effect_ripple_background"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>